--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PonGGame</title>
-    <script src="../node_modules/p5/lib/p5.min.js"></script>
+    <script src="lib/p5.min.js"></script>
 </head>
 <body>
     <h2>PonGGame</h2><br>
